; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/common/extr_d3d8_common.c_d3d8_texture_new.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/common/extr_d3d8_common.c_d3d8_texture_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.IDirect3DTexture8 = type { i32 }

@_dev = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @d3d8_texture_new(i32 %0, i8* %1, i32 %2, i32 %3, i32 %4, i32 %5, i64 %6, i64 %7, i32 %8, i32 %9, i64 %10, i8* %11, i32* %12, i32 %13) #0 {
  %15 = alloca i8*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i8*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i64, align 8
  %23 = alloca i64, align 8
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i64, align 8
  %27 = alloca i8*, align 8
  %28 = alloca i32*, align 8
  %29 = alloca i32, align 4
  %30 = alloca i8*, align 8
  store i32 %0, i32* %16, align 4
  store i8* %1, i8** %17, align 8
  store i32 %2, i32* %18, align 4
  store i32 %3, i32* %19, align 4
  store i32 %4, i32* %20, align 4
  store i32 %5, i32* %21, align 4
  store i64 %6, i64* %22, align 8
  store i64 %7, i64* %23, align 8
  store i32 %8, i32* %24, align 4
  store i32 %9, i32* %25, align 4
  store i64 %10, i64* %26, align 8
  store i8* %11, i8** %27, align 8
  store i32* %12, i32** %28, align 8
  store i32 %13, i32* %29, align 4
  store i8* null, i8** %30, align 8
  %31 = load i8*, i8** %17, align 8
  %32 = icmp ne i8* %31, null
  br i1 %32, label %33, label %34

33:                                               ; preds = %14
  store i8* null, i8** %15, align 8
  br label %51

34:                                               ; preds = %14
  %35 = load i32, i32* %16, align 4
  %36 = load i32, i32* %18, align 4
  %37 = load i32, i32* %19, align 4
  %38 = load i32, i32* %20, align 4
  %39 = load i32, i32* %21, align 4
  %40 = load i64, i64* %22, align 8
  %41 = trunc i64 %40 to i32
  %42 = load i64, i64* %23, align 8
  %43 = trunc i64 %42 to i32
  %44 = bitcast i8** %30 to %struct.IDirect3DTexture8**
  %45 = call i32 @IDirect3DDevice8_CreateTexture(i32 %35, i32 %36, i32 %37, i32 %38, i32 %39, i32 %41, i32 %43, %struct.IDirect3DTexture8** %44)
  %46 = call i64 @FAILED(i32 %45)
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %48, label %49

48:                                               ; preds = %34
  store i8* null, i8** %15, align 8
  br label %51

49:                                               ; preds = %34
  %50 = load i8*, i8** %30, align 8
  store i8* %50, i8** %15, align 8
  br label %51

51:                                               ; preds = %49, %48, %33
  %52 = load i8*, i8** %15, align 8
  ret i8* %52
}

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @IDirect3DDevice8_CreateTexture(i32, i32, i32, i32, i32, i32, i32, %struct.IDirect3DTexture8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
